# mcp-agent

./: CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: AGENT_SYSTEM.md  ARCHITECTURE.md
examples/: README.md  __init__.py  agent_demo.py  claude_config.json  client.py
src/mcp_demo/: __init__.py  agent.py  orchestrator.py  server.py  subagent.py  task.py
tests/: __init__.py  test_agents.py  test_server.py
